Add Deno configuration and implement Easy Prime Checker web app

--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Easy Prime Checker</title>
+    <script src="primeTester.js"></script>
     <style>
         body {
             background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-YiFm59RLF_x-kJRTJnYqbvt6ArrOd_2fjA&s);
@@ -27,12 +28,12 @@
         }
     </style>
 </head>
+
 <body>
     <h1>Easy Prime Checker</h1>
     <input id="number" placeholder="Type a number">
     <button onclick="checkNumber()">Check Number</button>
     <p id="result"></p>
 
-    <script src="script.js"></script>
 </body>
 </html>
